Fixing relative paths issue

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -9,23 +9,23 @@
   <body>
     
     <header>
-      <!-- This navbar should be the same as in index.html, the only difference is that index.html is one level up -->
+      <!-- Adding navbar -->
       <nav>
       <div class="navbar">
-        <a href="/contact/contact.html">Contact</a>    
+        <a href="https://denis-li-20.github.io/01-Learning-Web-Development/contact/contact.html">Contact</a> <!-- Navbar is aligned to the right, therefore reversed order of the buttons -->
         <div class="dropdown">
-          <button class="dropbtn">Study Plan
+          <button class="dropbtn">Study Plan <!-- This is a dropdown button -->
           </button>
-          <div class="dropdown-content">
-            <a href="/plan/html.html">HTML</a>
-            <a href="/plan/css.html">CSS</a>
-            <a href="/plan/java-script.html">Java Script</a>
+          <div class="dropdown-content"> <!-- This is a dropdown content -->
+            <a href="https://denis-li-20.github.io/01-Learning-Web-Development/plan/html.html">HTML</a>
+            <a href="https://denis-li-20.github.io/01-Learning-Web-Development/plan/css.html">CSS</a>
+            <a href="https://denis-li-20.github.io/01-Learning-Web-Development/plan/java-script.html">Java Script</a>
           </div>
         </div>
-        <a href="../index.html">About Me</a>
+        <a href="https://denis-li-20.github.io/01-Learning-Web-Development/index.html">About Me</a> <!-- Navbar is aligned to the right, therefore reversed order of the buttons -->
       </div>
       </nav>
-      <!-- This navbar should be the same as in index.html, the only difference is that index.html is one level up -->
+      <!-- Adding navbar -->
     </header>
     
     <main>
