Fixing relative path issue

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://denis-li-20.github.io/01-Learning-Web-Development/plan/java-script.html">Java Script</a>
           </div>
         </div>
-        <a href="index.html">About Me</a> <!-- Navbar is aligned to the right, therefore reversed order of the buttons -->
+        <a href="https://denis-li-20.github.io/01-Learning-Web-Development/index.html">About Me</a> <!-- Navbar is aligned to the right, therefore reversed order of the buttons -->
       </div>
       </nav>
       <!-- Adding navbar -->
