--- a/plan/css.html
+++ b/plan/css.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -39,7 +39,7 @@
 
       <h3>
         Worry not, some day the useful information will be here 100% (no)!
-      <h3>
+      </h3>
       <!-- Content has to be updated here -->
     </main>
     <script src="script.js"></script>
