Fixing errors reported by validator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -32,24 +32,23 @@
       <img class="image" src="My-Photo.jpg" alt="Image Not Found!">
       <!-- Adding photo (with image class) width controlled from CSS -->
       
-      <h2 class="long-text">
-        Hey! I'm Denis Li
-      </h2>
-
       <!-- introduction -->
       <article>
+        <h2>
+          Hey! I'm Denis Li
+        </h2>
         <p>
           I am a mining consultant living in Denver, also known as "A Mile-High City".
         </p>
         <p>
           During my work in the mining industry I had used Python scripting for:
-          <ul>
-            <li>Regression tests</li>
-            <li>Data Managment</li>
-            <li>Haulage Optimization</li>
-            <li>FUN!</li>
-          </ul>
         </p>
+        <ul>
+          <li>Regression tests</li>
+          <li>Data Managment</li>
+          <li>Haulage Optimization</li>
+          <li>FUN!</li>
+        </ul>
       </article>
       <!-- introduction -->
 
