Forcing external links to open in a new tab

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -34,10 +34,10 @@
         Feel free to visit my: 
       </h1>
       <h3>
-        <a href="https://www.linkedin.com/in/denis-li-mining-engineer">LinkedIn profile</a>
+        <a href="https://www.linkedin.com/in/denis-li-mining-engineer" target="_blank">LinkedIn profile</a>
       </h3>
       <h3>
-        <a href="https://github.com/Denis-Li-20/01-Learning-JS">GitHub</a>
+        <a href="https://github.com/Denis-Li-20/01-Learning-JS" target="_blank">GitHub</a>
       </h3>
       <!-- Content has to be updated here -->
     </main>
