--- a/contact/contact.html
+++ b/contact/contact.html
@@ -41,6 +41,13 @@
       </h3>
       <!-- Content has to be updated here -->
     </main>
+    
+    <!-- Adding a footer -->
+    <footer>
+      <p> This is a work in progress, content will be updated some day! </p>
+    </footer>
+    <!-- Adding a footer -->
+    
     <script src="script.js"></script>
   </body>
 </html>
