--- a/plan/css.html
+++ b/plan/css.html
@@ -34,14 +34,21 @@
         Ooops! 
       </h1>
       <h2>
-        Looks like I'm still working on this content
+        I am still working on this content.
       </h2>
 
       <h3>
-        Worry not, some day the useful information will be here 100% (no)!
+        Worry not, someday the useful information will be here 100% (no)!
       </h3>
       <!-- Content has to be updated here -->
     </main>
+    
+    <!-- Adding a footer -->
+    <footer>
+      <p> This webpage is a work in progress; working on the content! </p>
+    </footer>
+    <!-- Adding a footer -->
+    
     <script src="script.js"></script>
   </body>
 </html>
