--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     
     <!-- Adding a footer -->
     <footer>
-      <p> This is a work in progress, content will be updated some day! </p>
+       <p> This webpage is a work in progress; working on the content! </p>
     </footer>
     <!-- Adding a footer -->
     
