Changed the spelling error (managment -> management)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>First portfolio project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -44,8 +44,8 @@
           During my work in the mining industry, I had used Python scripting for:
         </p>
         <ul>
-          <li>Regression tests</li>
-          <li>Data Managment</li>
+          <li>Regression Tests</li>
+          <li>Data Management</li>
           <li>Haulage Optimization</li>
           <li>FUN!</li>
         </ul>
@@ -93,7 +93,7 @@
               <li>Paragraphs</li>
               <li>Classes</li>
               <li>Hyperlinks</li>
-              <li>Dividers (Study Plan | Java Script</li>
+              <li>Dividers (Study Plan | Java Script)</li>
               <li>Navigation Bar</li>
               <li>Buttons (Navigation Bar)</li>
             </ol>
