--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </table>
       <!-- Using table to split data into 2 columns -->
       <p>
-        And a lot of other things! The list above added for the sake of using the table. 🙄
+        And a lot of other things! The list above was added for the sake of using the table. 🙄
       </p>
       <!-- Extra infromation block to test tables and classes -->
 
