updating the title of the page

--- a/plan/java-script.html
+++ b/plan/java-script.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>First portfolio project</title>
     <!-- Stylesheets will be concatenated in the same order as they are declared! -->
     <link href="https://denis-li-20.github.io/01-Learning-Web-Development/plan/java-script.css" rel="stylesheet" type="text/css" />
     <link href="../style.css" rel="stylesheet" type="text/css" />
