--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <li>Fonts, including fallback fonts</li>
               <li>Alignment</li>
               <li>Margins (All Pages)</li>
-              <li>Colors (coolors set used)</li>
+              <li>Colors</li>
               <li>Padding</li>
               <li>Float</li>
               <li>Overflow</li>
